--- a/openApiDocs/beta/ManagedTenants.yml
+++ b/openApiDocs/beta/ManagedTenants.yml
@@ -12647,8 +12647,10 @@ components:
       properties:
         displayName:
           type: string
+          description: Brief title for the page that the links directs to.
         url:
           type: string
+          description: The URL to the documentation or Azure portal page.
           nullable: true
       additionalProperties:
         type: object
