--- a/openApiDocs/v1.0/Applications.yml
+++ b/openApiDocs/v1.0/Applications.yml
@@ -96,6 +96,8 @@ paths:
                 - publicClient desc
                 - publisherDomain
                 - publisherDomain desc
+                - requestSignatureVerification
+                - requestSignatureVerification desc
                 - requiredResourceAccess
                 - requiredResourceAccess desc
                 - samlMetadataUrl
@@ -152,6 +154,7 @@ paths:
                 - passwordCredentials
                 - publicClient
                 - publisherDomain
+                - requestSignatureVerification
                 - requiredResourceAccess
                 - samlMetadataUrl
                 - serviceManagementReference
@@ -279,6 +282,7 @@ paths:
                 - passwordCredentials
                 - publicClient
                 - publisherDomain
+                - requestSignatureVerification
                 - requiredResourceAccess
                 - samlMetadataUrl
                 - serviceManagementReference
@@ -2305,6 +2309,7 @@ paths:
                 - passwordCredentials
                 - publicClient
                 - publisherDomain
+                - requestSignatureVerification
                 - requiredResourceAccess
                 - samlMetadataUrl
                 - serviceManagementReference
@@ -2386,6 +2391,8 @@ paths:
                 - publicClient desc
                 - publisherDomain
                 - publisherDomain desc
+                - requestSignatureVerification
+                - requestSignatureVerification desc
                 - requiredResourceAccess
                 - requiredResourceAccess desc
                 - samlMetadataUrl
@@ -2659,28 +2666,6 @@ paths:
         nextLinkName: '@odata.nextLink'
         operationName: listMore
       x-ms-docs-operation-type: operation
-    post:
-      tags:
-        - applicationTemplates.applicationTemplate
-      summary: Add new entity to applicationTemplates
-      operationId: applicationTemplates.applicationTemplate_CreateApplicationTemplate
-      requestBody:
-        description: New entity
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/microsoft.graph.applicationTemplate'
-        required: true
-      responses:
-        2XX:
-          description: Created entity
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/microsoft.graph.applicationTemplate'
-        default:
-          $ref: '#/components/responses/error'
-      x-ms-docs-operation-type: operation
   '/applicationTemplates/{applicationTemplate-id}':
     get:
       tags:
@@ -2739,63 +2724,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/microsoft.graph.applicationTemplate'
-        default:
-          $ref: '#/components/responses/error'
-      x-ms-docs-operation-type: operation
-    patch:
-      tags:
-        - applicationTemplates.applicationTemplate
-      summary: Update entity in applicationTemplates
-      operationId: applicationTemplates.applicationTemplate_UpdateApplicationTemplate
-      parameters:
-        - name: applicationTemplate-id
-          in: path
-          description: 'key: id of applicationTemplate'
-          required: true
-          style: simple
-          schema:
-            type: string
-          x-ms-docs-key-type: applicationTemplate
-      requestBody:
-        description: New property values
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/microsoft.graph.applicationTemplate'
-        required: true
-      responses:
-        2XX:
-          description: ''
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/microsoft.graph.applicationTemplate'
-        default:
-          $ref: '#/components/responses/error'
-      x-ms-docs-operation-type: operation
-    delete:
-      tags:
-        - applicationTemplates.applicationTemplate
-      summary: Delete entity from applicationTemplates
-      operationId: applicationTemplates.applicationTemplate_DeleteApplicationTemplate
-      parameters:
-        - name: applicationTemplate-id
-          in: path
-          description: 'key: id of applicationTemplate'
-          required: true
-          style: simple
-          schema:
-            type: string
-          x-ms-docs-key-type: applicationTemplate
-        - name: If-Match
-          in: header
-          description: ETag
-          style: simple
-          schema:
-            type: string
-      responses:
-        '204':
-          description: Success
         default:
           $ref: '#/components/responses/error'
       x-ms-docs-operation-type: operation
@@ -7637,6 +7565,8 @@ components:
               type: string
               description: 'The verified publisher domain for the application. Read-only. For more information, see How to: Configure an application''s publisher domain. Supports $filter (eq, ne, ge, le, startsWith).'
               nullable: true
+            requestSignatureVerification:
+              $ref: '#/components/schemas/microsoft.graph.requestSignatureVerification'
             requiredResourceAccess:
               type: array
               items:
@@ -8516,6 +8446,16 @@ components:
           description: 'Specifies the URLs where user tokens are sent for sign-in, or the redirect URIs where OAuth 2.0 authorization codes and access tokens are sent.'
       additionalProperties:
         type: object
+    microsoft.graph.requestSignatureVerification:
+      title: requestSignatureVerification
+      type: object
+      properties:
+        allowedWeakAlgorithms:
+          $ref: '#/components/schemas/microsoft.graph.weakAlgorithms'
+        isSignedRequestRequired:
+          type: boolean
+      additionalProperties:
+        type: object
     microsoft.graph.requiredResourceAccess:
       title: requiredResourceAccess
       type: object
@@ -8971,6 +8911,12 @@ components:
           nullable: true
       additionalProperties:
         type: object
+    microsoft.graph.weakAlgorithms:
+      title: weakAlgorithms
+      enum:
+        - rsaSha1
+        - unknownFutureValue
+      type: string
     microsoft.graph.resourceAccess:
       title: resourceAccess
       type: object
