--- a/openApiDocs/v1.0/DeviceManagement.yml
+++ b/openApiDocs/v1.0/DeviceManagement.yml
@@ -6186,6 +6186,8 @@ paths:
                 - employeeHireDate desc
                 - employeeId
                 - employeeId desc
+                - employeeLeaveDateTime
+                - employeeLeaveDateTime desc
                 - employeeOrgData
                 - employeeOrgData desc
                 - employeeType
@@ -6327,6 +6329,7 @@ paths:
                 - displayName
                 - employeeHireDate
                 - employeeId
+                - employeeLeaveDateTime
                 - employeeOrgData
                 - employeeType
                 - externalUserState
@@ -6530,6 +6533,8 @@ paths:
                 - displayName desc
                 - lastModifiedDateTime
                 - lastModifiedDateTime desc
+                - roleScopeTagIds
+                - roleScopeTagIds desc
               type: string
         - name: $select
           in: query
@@ -6546,6 +6551,7 @@ paths:
                 - defaultLocale
                 - displayName
                 - lastModifiedDateTime
+                - roleScopeTagIds
                 - localizedNotificationMessages
               type: string
         - name: $expand
@@ -6623,6 +6629,7 @@ paths:
                 - defaultLocale
                 - displayName
                 - lastModifiedDateTime
+                - roleScopeTagIds
                 - localizedNotificationMessages
               type: string
         - name: $expand
@@ -7914,7 +7921,7 @@ components:
               readOnly: true
             ethernetMacAddress:
               type: string
-              description: 'Ethernet MAC. Default, is Null (Non-Default property) for this property when returned as part of managedDevice entity. Individual get call with select query options is needed to retrieve actual values. Example: deviceManagement/managedDevices({managedDeviceId})?$select=ethernetMacAddress Supports: $select. $Search is not supported. Read-only. This property is read-only.'
+              description: 'Indicates Ethernet MAC Address of the device. Default, is Null (Non-Default property) for this property when returned as part of managedDevice entity. Individual get call with select query options is needed to retrieve actual values. Example: deviceManagement/managedDevices({managedDeviceId})?$select=ethernetMacAddress Supports: $select. $Search is not supported. Read-only. This property is read-only.'
               nullable: true
               readOnly: true
             exchangeAccessState:
@@ -9038,6 +9045,12 @@ components:
               type: string
               description: DateTime the object was last modified.
               format: date-time
+            roleScopeTagIds:
+              type: array
+              items:
+                type: string
+                nullable: true
+              description: List of Scope Tags for this Entity instance.
             localizedNotificationMessages:
               type: array
               items:
@@ -9633,6 +9646,11 @@ components:
               type: string
               description: Partner display name
               nullable: true
+            groupsRequiringPartnerEnrollment:
+              type: array
+              items:
+                $ref: '#/components/schemas/microsoft.graph.deviceManagementPartnerAssignment'
+              description: User groups that specifies whether enrollment is through partner.
             isConfigured:
               type: boolean
               description: Whether device management partner is configured or not
@@ -9712,23 +9730,38 @@ components:
         - title: mobileThreatDefenseConnector
           type: object
           properties:
+            allowPartnerToCollectIOSApplicationMetadata:
+              type: boolean
+              description: 'When TRUE, indicates the data sync partner may collect metadata about installed applications from Intune for IOS devices. When FALSE, indicates the data sync partner may not collect metadata about installed applications from Intune for IOS devices. Default value is FALSE.'
+            allowPartnerToCollectIOSPersonalApplicationMetadata:
+              type: boolean
+              description: 'When TRUE, indicates the data sync partner may collect metadata about personally installed applications from Intune for IOS devices. When FALSE, indicates the data sync partner may not collect metadata about personally installed applications from Intune for IOS devices. Default value is FALSE.'
             androidDeviceBlockedOnMissingPartnerData:
               type: boolean
               description: 'For Android, set whether Intune must receive data from the data sync partner prior to marking a device compliant'
             androidEnabled:
               type: boolean
               description: 'For Android, set whether data from the data sync partner should be used during compliance evaluations'
+            androidMobileApplicationManagementEnabled:
+              type: boolean
+              description: 'When TRUE, inidicates that data from the data sync partner can be used during Mobile Application Management (MAM) evaluations for Android devices. When FALSE, inidicates that data from the data sync partner should not be used during Mobile Application Management (MAM) evaluations for Android devices. Only one partner per platform may be enabled for Mobile Application Management (MAM) evaluation. Default value is FALSE.'
             iosDeviceBlockedOnMissingPartnerData:
               type: boolean
               description: 'For IOS, set whether Intune must receive data from the data sync partner prior to marking a device compliant'
             iosEnabled:
               type: boolean
               description: 'For IOS, get or set whether data from the data sync partner should be used during compliance evaluations'
+            iosMobileApplicationManagementEnabled:
+              type: boolean
+              description: 'When TRUE, inidicates that data from the data sync partner can be used during Mobile Application Management (MAM) evaluations for IOS devices. When FALSE, inidicates that data from the data sync partner should not be used during Mobile Application Management (MAM) evaluations for IOS devices. Only one partner per platform may be enabled for Mobile Application Management (MAM) evaluation. Default value is FALSE.'
             lastHeartbeatDateTime:
               pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
               type: string
               description: DateTime of last Heartbeat recieved from the Data Sync Partner
               format: date-time
+            microsoftDefenderForEndpointAttachEnabled:
+              type: boolean
+              description: 'When TRUE, inidicates that configuration profile management via Microsoft Defender for Endpoint is enabled. When FALSE, inidicates that configuration profile management via Microsoft Defender for Endpoint is disabled. Default value is FALSE.'
             partnerState:
               $ref: '#/components/schemas/microsoft.graph.mobileThreatPartnerTenantState'
             partnerUnresponsivenessThresholdInDays:
@@ -9740,6 +9773,12 @@ components:
             partnerUnsupportedOsVersionBlocked:
               type: boolean
               description: Get or set whether to block devices on the enabled platforms that do not meet the minimum version requirements of the Data Sync Partner
+            windowsDeviceBlockedOnMissingPartnerData:
+              type: boolean
+              description: 'When TRUE, inidicates that Intune must receive data from the data sync partner prior to marking a device compliant for Windows. When FALSE, inidicates that Intune may make a device compliant without receiving data from the data sync partner for Windows. Default value is FALSE.'
+            windowsEnabled:
+              type: boolean
+              description: 'When TRUE, inidicates that data from the data sync partner can be used during compliance evaluations for Windows. When FALSE, inidicates that data from the data sync partner should not be used during compliance evaluations for Windows. Default value is FALSE.'
           additionalProperties:
             type: object
           description: Entity which represents a connection to Mobile threat defense partner.
@@ -10708,6 +10747,11 @@ components:
               type: string
               description: 'The employee identifier assigned to the user by the organization. The maximum length is 16 characters. Returned only on $select. Supports $filter (eq, ne, not , ge, le, in, startsWith, and eq on null values).'
               nullable: true
+            employeeLeaveDateTime:
+              pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
+              type: string
+              format: date-time
+              nullable: true
             employeeOrgData:
               $ref: '#/components/schemas/microsoft.graph.employeeOrgData'
             employeeType:
@@ -11498,6 +11542,7 @@ components:
         - includeContactInformation
         - includeCompanyPortalLink
         - includeDeviceDetails
+        - unknownFutureValue
       type: string
       description: Branding Options for the Message Template. Branding is defined in the Intune Admin Console.
       x-ms-enum:
@@ -11505,23 +11550,26 @@ components:
         modelAsString: false
         values:
           - value: none
-            description: No Branding.
+            description: Indicates that no branding options are set in the message template.
             name: none
           - value: includeCompanyLogo
-            description: Include Company Logo.
+            description: Indicates to include company logo in the message template.
             name: includeCompanyLogo
           - value: includeCompanyName
-            description: Include Company Name.
+            description: Indicates to include company name in the message template.
             name: includeCompanyName
           - value: includeContactInformation
-            description: Include Contact Info.
+            description: Indicates to include contact information in the message template.
             name: includeContactInformation
           - value: includeCompanyPortalLink
-            description: Include Company Portal Link.
+            description: Indicates to include company portal website link in the message template.
             name: includeCompanyPortalLink
           - value: includeDeviceDetails
-            description: Include Device Details.
+            description: Indicates to include device details in the message template.
             name: includeDeviceDetails
+          - value: unknownFutureValue
+            description: Evolvable enumeration sentinel value. Do not use.
+            name: unknownFutureValue
     microsoft.graph.applicationType:
       title: applicationType
       enum:
@@ -12076,6 +12124,15 @@ components:
           additionalProperties:
             type: object
           description: Enrollment Configuration Assignment
+    microsoft.graph.deviceManagementPartnerAssignment:
+      title: deviceManagementPartnerAssignment
+      type: object
+      properties:
+        target:
+          $ref: '#/components/schemas/microsoft.graph.deviceAndAppManagementAssignmentTarget'
+      additionalProperties:
+        type: object
+      description: User group targeting for Device Management Partner
     microsoft.graph.deviceManagementPartnerAppType:
       title: deviceManagementPartnerAppType
       enum:
@@ -12104,6 +12161,7 @@ components:
         - hosted
         - serviceToService
         - dedicated
+        - unknownFutureValue
       type: string
       description: The type of Exchange Connector.
       x-ms-enum:
@@ -12122,6 +12180,9 @@ components:
           - value: dedicated
             description: Connects to O365 Dedicated Exchange environment.
             name: dedicated
+          - value: unknownFutureValue
+            description: Evolvable enumeration sentinel value. Do not use.
+            name: unknownFutureValue
     microsoft.graph.deviceManagementExchangeConnectorStatus:
       title: deviceManagementExchangeConnectorStatus
       enum:
@@ -12129,6 +12190,7 @@ components:
         - connectionPending
         - connected
         - disconnected
+        - unknownFutureValue
       type: string
       description: The current status of the Exchange Connector.
       x-ms-enum:
@@ -12147,6 +12209,9 @@ components:
           - value: disconnected
             description: Disconnected from the Exchange Environment
             name: disconnected
+          - value: unknownFutureValue
+            description: Evolvable enumeration sentinel value. Do not use.
+            name: unknownFutureValue
     microsoft.graph.mobileThreatPartnerTenantState:
       title: mobileThreatPartnerTenantState
       enum:
@@ -18235,15 +18300,15 @@ components:
       properties:
         driveId:
           type: string
-          description: Unique identifier of the drive instance that contains the item. Read-only.
+          description: 'Unique identifier of the drive instance that contains the driveItem. Only returned if the item is located in a [drive][]. Read-only.'
           nullable: true
         driveType:
           type: string
-          description: 'Identifies the type of drive. See [drive][] resource for values.'
+          description: 'Identifies the type of drive. Only returned if the item is located in a [drive][]. See [drive][] resource for values.'
           nullable: true
         id:
           type: string
-          description: Unique identifier of the item in the drive. Read-only.
+          description: Unique identifier of the driveItem in the drive or a listItem in a list. Read-only.
           nullable: true
         name:
           type: string
@@ -18261,7 +18326,7 @@ components:
           $ref: '#/components/schemas/microsoft.graph.sharepointIds'
         siteId:
           type: string
-          description: 'For OneDrive for Business and SharePoint, this property represents the ID of the site that contains the parent document library of the driveItem resource. The value is the same as the id property of that [site][] resource. It is an opaque string that consists of three identifiers of the site. For OneDrive, this property is not populated.'
+          description: 'For OneDrive for Business and SharePoint, this property represents the ID of the site that contains the parent document library of the driveItem resource or the parent list of the listItem resource. The value is the same as the id property of that [site][] resource. It is an opaque string that consists of three identifiers of the site. For OneDrive, this property is not populated.'
           nullable: true
       additionalProperties:
         type: object
@@ -19548,7 +19613,7 @@ components:
               description: Name of the bucket.
             orderHint:
               type: string
-              description: Hint used to order items of this type in a list view. The format is defined as outlined here.
+              description: 'Hint used to order items of this type in a list view. For details about the supported format, see Using order hints in Planner.'
               nullable: true
             planId:
               type: string
@@ -20302,6 +20367,7 @@ components:
           nullable: true
         teamsAppId:
           type: string
+          description: The ID of the Teams app that is associated with the attachment. The property is specifically used to attribute a Teams message card to the specified app.
           nullable: true
         thumbnailUrl:
           type: string
@@ -20927,6 +20993,7 @@ components:
               $ref: '#/components/schemas/microsoft.graph.dateTimeTimeZone'
             hasAttachments:
               type: boolean
+              description: Indicates whether the task has attachments.
               nullable: true
             importance:
               $ref: '#/components/schemas/microsoft.graph.importance'
@@ -20954,6 +21021,7 @@ components:
               type: array
               items:
                 $ref: '#/components/schemas/microsoft.graph.attachmentBase'
+              description: A collection of file attachments for the task.
               readOnly: true
             attachmentSessions:
               type: array
@@ -21764,6 +21832,7 @@ components:
         - presenter
         - unknownFutureValue
         - producer
+        - coorganizer
       type: string
     microsoft.graph.attendanceInterval:
       title: attendanceInterval
@@ -22128,19 +22197,23 @@ components:
           properties:
             contentType:
               type: string
+              description: The MIME type.
               nullable: true
             lastModifiedDateTime:
               pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
               type: string
+              description: 'The Timestamp type represents date and time information using ISO 8601 format and is always in UTC time. For example, midnight UTC on Jan 1, 2014 is 2014-01-01T00:00:00Z.'
               format: date-time
               nullable: true
             name:
               type: string
+              description: The display name of the attachment. This does not need to be the actual file name.
               nullable: true
             size:
               maximum: 2147483647
               minimum: -2147483648
               type: integer
+              description: The length of the attachment in bytes.
               format: int32
           additionalProperties:
             type: object
@@ -22152,11 +22225,13 @@ components:
           properties:
             content:
               type: string
+              description: The content streams that are uploaded.
               format: base64url
               nullable: true
             expirationDateTime:
               pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
               type: string
+              description: The date and time in UTC when the upload session will expire. The complete file must be uploaded before this expiration time is reached.
               format: date-time
               nullable: true
             nextExpectedRanges:
@@ -22164,6 +22239,7 @@ components:
               items:
                 type: string
                 nullable: true
+              description: 'Indicates a single value {start} that represents the location in the file where the next upload should begin.'
           additionalProperties:
             type: object
     microsoft.graph.checklistItem:
